fix: update z-index of sticky contact widget for improved visibility

--- a/footer.css
+++ b/footer.css
@@ -35,7 +35,7 @@
   bottom: 1px;
   right: 1px;
   width: fit-content;
-  z-index: 1;
+  z-index: 999;
   overflow: hidden;
   margin-left: auto;
   display: flex;
